Fixed some spacing issues.

--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ table.displayTable {
 /*    margin-top: 41px;*/
     border-collapse: collapse;
     width: 100.1%; /*Slightly more than 100%, cause 100% doesn't quite fill the frame for some reason*/
-    height: calc(100% - 41px);
+    height: 100%;
     overflow: scroll;
     font-size: 10pt;
 }
@@ -525,7 +525,7 @@ tbody {
     text-align: left;
     border-top: 0px;
     border-left: 0px;
-    padding: 4px 0;
+/*    padding: 4px 0;*/
     font-size: 10pt;
     padding-left: 10px;
 }
